# blindcopy

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: text.rs
src/: lib.rs  linux.rs  macos.rs  windows.rs
tests/: linux.rs  macos.rs  windows.rs
