[package]
name = 'blindcopy'
description = 'Copy data to clipboard without appearing in history or sync.'
license = 'BSD-3-Clause'
repository = 'https://github.com/nc7s/blindcopy'
version = '0.1.0'
edition = '2021'

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = '0.8.1'

[target.'cfg(target_os = "macos")'.dependencies]
objc = '0.2.7'
objc_id = '0.1.1'
objc-foundation = '0.1.1'

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = '5.2.0'
